k8s/applications/ui-main/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-main
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-main
  template:
    metadata:
      labels:
        app: ui-main
    spec:
      containers:
      - name: ui-main
        image: webtruyenacr2855.azurecr.io/ui-main:d957557e2f74dee1edb8730b8f3219c666875129
        ports:
        - containerPort: 3000
