k8s/applications/ui-main/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-main
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: ui-main
  ports:
  - port: 3001
    targetPort: 3000
